update state pattern